bug fixes - body overflow

--- a/css/style.css
+++ b/css/style.css
@@ -129,10 +129,6 @@ html, body, div, span, section, p, a, ul, ol, li, input, textarea, dl, dd, dt, t
   Author's custom styles
   ========================================================================== */
 
-  body {
-    overflow-x: hidden;
-  }
-
   .overlay::after {
     content: '';
     position: absolute;
@@ -405,6 +401,7 @@ html, body, div, span, section, p, a, ul, ol, li, input, textarea, dl, dd, dt, t
 
   .contact-us-info .item:last-child {
     margin-left: 8% ;
+    width: 92%;
   }
 
   .item-content-text {
